# whisper-key-local

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  audio_recorder.py  branch-plan.md  clipboard_manager.py  code-review-guide.md  config.defaults.yaml  config.yaml  dhh-review.md  hotkey_listener.py  main.py  progress-report.md  pyproject.toml  refactor.md  requirements.txt  silence-hallucination.md  state-management-update.md  state_manager.py  whisper-key.py  whisper_engine.py
.claude/: config-audit-agent.md
.documentation/: roadmap.md
assets/: README.md
doc/: PLAN_OVERLAY_CONFIG.md
docs/: gpu-setup.md  project-index.md
documentation/: code-review-metrics.md  components.md  dev-plan.md  gpu-setup.md  plan-execution.md  plan-writing.md  project-index.md  roadmap.md  voice-commands.md
py-build/: build-windows.ps1  builder.py  config.py  whisper-key.spec
py2exe-build/: build.ps1  builder.py  config.py
pyapp-build/: CLAUDE.md  build-config.example.json  build-pyapp.ps1
pyinstaller-build/: build-windows.ps1
src/: audio_feedback.py  audio_recorder.py  clipboard_manager.py  config_manager.py  hotkey_listener.py  instance_manager.py  single_instance.py  state_manager.py  system_tray.py  utils.py  whisper_engine.py
tests/: run_component_tests.py
tools/: check_loopback_devices.py  clear_log.py  clear_model_cache.py  create_tray_icons.py  key_helper.py  key_helper_alt.py  open_log_file.py  open_user_settings.py  reset_user_settings.py  sherpa_streaming_demo.py  show_portaudio_dll.py  test_macos_hotkey.py  test_nsevent_hotkey.py  (+3 more)
(+201 files in other folders)
