[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-key-local"
version = "0.5.3"
description = "Local faster-whisper speech-to-text app with global hotkeys for Windows"
readme = "README.md"
authors = [
    {name = "Pin Wang", email = "pinwang@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.6.3",
    "numpy>=1.24.0",
    "soxr>=0.3.0",
    "sounddevice>=0.4.6",
    "global-hotkeys>=0.1.7; platform_system=='Windows'",
    "pyperclip>=1.8.2",
    "ruamel.yaml>=0.18.14",
    "pywin32>=306; platform_system=='Windows'",
    "pyautogui>=0.9.54; platform_system=='Windows'",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "hf-xet>=1.1.5",
    "playsound3>=2.0",
    "ten-vad>=1.0.6",

    # macOS-only
    "quickmachotkey; sys_platform=='darwin'",
    "pyobjc-framework-Quartz; sys_platform=='darwin'",
]

[project.scripts]
whisper-key = "whisper_key.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"whisper_key" = ["assets/**/*", "config.defaults.yaml"]